--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
     <header class="page-header">
@@ -46,19 +47,19 @@
               <p class="advantages__number">— №1 —</p>
               <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
             </div>
-            <img class="advantages__photo" src="#" width="1" height="1" alt="Жилье">
+            <img class="advantages__photo" src="img/main-city-mobile@1x.jpg" width="320" height="260" alt="Жилье">
             <div class="advantages__wrapper advantages__wrapper--detail">
               <ul>
                 <li class="advantages__detail advantages__detail--lodging">
-                  <p class="advantages__title">Жилье</p>
+                  <p class="advantages__title advantages__title--detail">Жилье</p>
                   <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
                 </li>
                 <li class="advantages__detail advantages__detail--souvenirs">
-                  <p class="advantages__title">Сувениры</p>
+                  <p class="advantages__title advantages__title--detail">Сувениры</p>
                   <p class="advantages__description">Не только китайского, но и местного производства!</p>
                 </li>
                 <li class="advantages__detail advantages__detail--food">
-                  <p class="advantages__title">Еда</p>
+                  <p class="advantages__title advantages__title--detail">Еда</p>
                   <p class="advantages__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
                 </li>
               </ul>
@@ -70,7 +71,7 @@
               <p class="advantages__number">— №2 —</p>
               <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
             </div>
-            <img class="advantages__photo" src="#" width="1" height="1" alt="Жилье">
+            <img class="advantages__photo" src="img/photo-bridge-mobile@1x.jpg" width="320" height="260" alt="мост дьявола">
           </li>
           <li class="advantages__item">
             <h3 class="advantages__title">Небольшая площадь</h3>
@@ -95,6 +96,7 @@
         <a class="search-hotel__button button" href="#">Найти гостиницу</a>
       </section>
       <div class="map">
+      	<img src="img/bg-map-mobile@1x.jpg" width="320" height="350" alt="sedona, arizona, usa">
       </div>
     </main>
     <footer class="page-footer">
