--- a/source/photo.html
+++ b/source/photo.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
-  <body>
+  <body class="photo-page">
     <header class="page-header">
       <nav class="main-nav">
         <div class="main-nav__wrapper">
@@ -43,7 +44,7 @@
         <ul class="photo">
           <li class="photo__item">
             <div class="photo__wrapper">
-              <img src="#" width="1" height="1" alt="Неродные просторы">
+              <img src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="Неродные просторы">
             </div>
             <div class="photo__text">
               <p class="photo__title">Неродные просторы</p>
@@ -56,7 +57,7 @@
           </li>
           <li class="photo__item">
             <div class="photo__wrapper">
-              <img src="#" width="1" height="1" alt="Местная растительность">
+              <img src="img/photo-cactus-mobile@1x.jpg" width="280" height="280" alt="Местная растительность">
             </div>
             <div class="photo__text">
               <p class="photo__title">Местная растительность</p>
@@ -69,7 +70,7 @@
           </li>
           <li class="photo__item">
             <div class="photo__wrapper">
-              <img src="#" width="1" height="1" alt="Дорога на север">
+              <img src="img/photo-roads-mobile@1x.jpg" width="280" height="280" alt="Дорога на север">
             </div>
             <div class="photo__text">
               <p class="photo__title">Дорога на север</p>
@@ -82,7 +83,7 @@
           </li>
           <li class="photo__item">
             <div class="photo__wrapper">
-              <img src="#" width="1" height="1" alt="Мост Дьявола">
+              <img src="img/main-bridge-mobile@1x.jpg" width="280" height="280" alt="Мост Дьявола">
             </div>
             <div class="photo__text">
               <p class="photo__title">Мост Дьявола</p>
@@ -101,7 +102,7 @@
           <p class="video__text">Смотрите видеопризентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
         </div>
         <div class="video__wrapper-video">
-          <img src="#" width="1" height="1" alt="Видеопрезентация">
+          <img src="img/video-mobile@1x.jpg" width="320" height="200" alt="Видеопрезентация">
           <div class="video__control-panel">
             <div class="video__time-control">
               <div class="video__time-scale">
@@ -122,13 +123,13 @@
       <div class="page-footer__social">
         <ul class="social">
           <li class="social__item">
-            <a class="social__link social__link--tw" href="#">Twitter</a>
+            <a class="social__link social__link--tw" href="#"><span class="visually-hidden">Twitter</span></a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--fb" href="#">Facebook</a>
+            <a class="social__link social__link--fb" href="#"><span class="visually-hidden">Facebook</span></a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--yt" href="#">Youtube</a>
+            <a class="social__link social__link--yt" href="#"><span class="visually-hidden">Youtube</span></a>
           </li>
         </ul>
       </div>
