--- a/source/form.html
+++ b/source/form.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
-  <body>
+  <body class="form-page">
     <header class="page-header">
       <nav class="main-nav">
         <div class="main-nav__wrapper">
@@ -140,7 +141,7 @@
     <section class="modal">
       <h2 class="modal__title">Что-то пошло не так!</h2>
       <p class="modal__text">Провертье поля, выделенные красным, скорее всего вы забыли их заполнить</p>
-      <button class="button modal__button modal__button--witdh--small" type="button">OK</button>
+      <button class="button modal__button modal__button--width--small" type="button">OK</button>
     </section>
     <section class="modal">
       <h2 class="modal__title">Ваш отзыв отправлен!</h2>
