Базовая стилизация. Правки

--- a/source/form.html
+++ b/source/form.html
@@ -20,7 +20,7 @@
               <a class="site-list__link site-list__link--active" >Форма отзыва</a>
             </li>
             <li class="site-list__item">
-              <a class="site-list__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+              <a class="site-list__link" href="index.html">HTML Academy</a>
             </li>
           </ul>
         </div>
