--- a/source/index.html
+++ b/source/index.html
@@ -25,7 +25,7 @@
           </ul>
         </div>
       </nav>
-      <a class="page-header__logo" href="https://htmlacademy.ru/intensive/adaptive">
+      <a class="page-header__logo">
         <img class="page-header__logo-image" src="#" width="1" height="1" alt="Седона">
       </a>
       <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
