--- a/source/form.html
+++ b/source/form.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
-  <body class="form-page">
+  <body>
     <header class="page-header">
       <nav class="main-nav">
         <div class="main-nav__wrapper">
@@ -32,12 +32,12 @@
     </header>
     <main class="page-main">
       <section class="intro">
-        <section class="intro__header">
+        <section class="intro__header--form">
           <img class="intro__logo" src="#" width="1" height="1" alt="sedona">
         </section>
         <section class="intro__content">
           <h2 class="intro__title">Оставьте свой отзыв</h2>
-          <p class="intro__text">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
+          <p class="intro__text intro__text--padding-form">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
         </section>
       </section>
       <form class="form" action="https://echo.htmlacademy.ru" method="post">
@@ -117,7 +117,7 @@
       </form>
     </main>
     <footer class="page-footer">
-      <p class="hashtag">#visitsedona</p>
+      <p class="page-footer__hashtag page-footer__hashtag--margin-form">#visitsedona</p>
       <div class="page-footer__social">
         <ul class="social">
           <li class="social__item">
