--- a/source/index.html
+++ b/source/index.html
@@ -100,7 +100,7 @@
       </div>
     </main>
     <footer class="page-footer">
-      <p class="hashtag">#visitsedona</p>
+      <p class="page-footer__hashtag">#visitsedona</p>
       <div class="page-footer__social">
         <ul class="social">
           <li class="social__item">
