--- a/source/photo.html
+++ b/source/photo.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
-  <body class="photo-page">
+  <body>
     <header class="page-header">
       <nav class="main-nav">
         <div class="main-nav__wrapper">
@@ -32,12 +32,12 @@
     </header>
     <main class="page-main">
       <section class="intro">
-        <section class="intro__header">
+        <section class="intro__header intro__header--photo">
           <img class="intro__logo" src="#" width="1" height="1" alt="sedona">
         </section>
         <section class="intro__content">
           <h2 class="intro__title">Фото и видео</h2>
-          <p class="intro__text">Не можете решиться на путешествие из-за курса? фотографии помогут вам забыть о политике и экономике.</p>
+          <p class="intro__text intro-text--padding-photo">Не можете решиться на путешествие из-за курса? фотографии помогут вам забыть о политике и экономике.</p>
         </section>
       </section>
       <section class="photo-wrapper">
@@ -119,7 +119,7 @@
       </section>
     </main>
     <footer class="page-footer">
-      <p class="hashtag">#visitsedona</p>
+      <p class="page-footer__hashtag">#visitsedona</p>
       <div class="page-footer__social">
         <ul class="social">
           <li class="social__item">
