--- a/source/form.html
+++ b/source/form.html
@@ -114,6 +114,7 @@
           <textarea class="form__comment" name="comment" placeholder="Опишите подробно все свои восторги"></textarea>
         </fieldset>
         <button class="form__button button" type="submit">Отправить отзыв</button>
+        <p class="form__note">* — обязательные поля</p>
       </form>
     </main>
     <footer class="page-footer">
@@ -138,12 +139,12 @@
         </a>
       </address>
     </footer>
-    <section class="modal">
+    <section class="modal modal--error">
       <h2 class="modal__title">Что-то пошло не так!</h2>
       <p class="modal__text">Провертье поля, выделенные красным, скорее всего вы забыли их заполнить</p>
       <button class="button modal__button modal__button--width--small" type="button">OK</button>
     </section>
-    <section class="modal">
+    <section class="modal modal--done">
       <h2 class="modal__title">Ваш отзыв отправлен!</h2>
       <p class="modal__text">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте</p>
       <button class="button modal__button modal__button--width--large" type="button">Закрыть окно</button>
