--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header class="page-header">
-      <nav class="main-nav">
+      <nav class="main-nav main-nav--open">
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
@@ -25,15 +25,15 @@
           </ul>
         </div>
       </nav>
-      <a class="page-header__logo">
-        <img class="page-header__logo-image" src="#" width="1" height="1" alt="Седона">
-      </a>
       <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="101" height="83" alt="Седона">
+      </a>
     </header>
     <main class="page-main">
       <section class="intro">
         <section class="intro__header">
-          <img class="intro__logo" src="#" width="1" height="1" alt="sedona">
+          <img class="intro__logo" src="img/text-sedona-index.svg" width="280" height="209" alt="sedona">
         </section>
         <section class="intro__content">
           <h2 class="visually-hidden">Преимущества городка Седона</h2>
@@ -92,7 +92,7 @@
       </section>
       <section class="search-hotel">
         <b class="search-hotel__title">Заинтересовались?</b>
-        <p class="search-hotel__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <p class="search-hotel__description">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a class="search-hotel__button button" href="#">Найти гостиницу</a>
       </section>
       <div class="map">
@@ -104,7 +104,8 @@
       <div class="page-footer__social">
         <ul class="social">
           <li class="social__item">
-            <a class="social__link social__link--tw" href="#"><span class="visually-hidden">Twitter</span></a>
+            <a class="social__link social__link--tw" href="#"><span class="visually-hidden">Twitter</span>
+              <img src="img/icon-twitter.svg"></a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--fb" href="#"><span class="visually-hidden">Facebook</span></a>
@@ -117,7 +118,7 @@
       <address class="page-footer__copyright copyright">
         <span class="copyright__text">Разработано</span>
         <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive">
-          <img src="#" width="1" height="1" alt="html academy">
+          <img src="img/htmlacademy.svg" width="35" height="35" alt="html academy">
         </a>
       </address>
     </footer>
