--- a/source/photo.html
+++ b/source/photo.html
@@ -10,11 +10,11 @@
       <nav class="main-nav">
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item--active">
+            <li class="site-list__item">
               <a class="site-list__link" href="index.html">Главная</a>
             </li>
             <li class="site-list__item">
-              <a class="site-list__link site-list__item--active">Фото и видео</a>
+              <a class="site-list__link site-list__link--active">Фото и видео</a>
             </li>
             <li class="site-list__item">
               <a class="site-list__link" href="form.html">Форма отзыва</a>
@@ -25,15 +25,15 @@
           </ul>
         </div>
       </nav>
-      <a class="page-header__logo" href="index.html">
-        <img class="page-header__logo-image" src="#" width="1" height="1" alt="Седона">
-      </a>
       <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <a class="page-header__logo" href="index.html">
+        <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="101" height="83" alt="Седона">
+      </a>
     </header>
     <main class="page-main">
       <section class="intro">
         <section class="intro__header intro__header--photo">
-          <img class="intro__logo" src="#" width="1" height="1" alt="sedona">
+          <img class="intro__logo" src="img/text-sedona.svg" width="280" height="209" alt="sedona">
         </section>
         <section class="intro__content">
           <h2 class="intro__title">Фото и видео</h2>
@@ -47,8 +47,10 @@
               <img src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="Неродные просторы">
             </div>
             <div class="photo__text">
-              <p class="photo__title">Неродные просторы</p>
-              <p class="photo__author">Автор фото: Борис</p>
+              <div class="photo__container">
+                <p class="photo__title">Неродные просторы</p>
+                <p class="photo__author">Автор фото: Борис</p>
+              </div>
               <div class="photo__likes">
                 <button class="photo__button" type="button"><span class="visually-hidden">Посавить лайк</span></button>
                 <p class="photo__sum">1350</p>
@@ -60,8 +62,10 @@
               <img src="img/photo-cactus-mobile@1x.jpg" width="280" height="280" alt="Местная растительность">
             </div>
             <div class="photo__text">
-              <p class="photo__title">Местная растительность</p>
-              <p class="photo__author">Автор фото: Сергей</p>
+              <div class="photo__container">
+                <p class="photo__title">Местная растительность</p>
+                <p class="photo__author">Автор фото: Сергей</p>
+              </div>
               <div class="photo__likes">
                 <button class="photo__button" type="button"><span class="visually-hidden">Посавить лайк</span></button>
                 <p class="photo__sum">143<p>
@@ -73,8 +77,10 @@
               <img src="img/photo-roads-mobile@1x.jpg" width="280" height="280" alt="Дорога на север">
             </div>
             <div class="photo__text">
-              <p class="photo__title">Дорога на север</p>
-              <p class="photo__author">Автор фото: Петр</p>
+              <div class="photo__container">
+                <p class="photo__title">Дорога на север</p>
+                <p class="photo__author">Автор фото: Петр</p>
+              </div>
               <div class="photo__likes">
                 <button class="photo__button" type="button"><span class="visually-hidden">Посавить лайк</span></button>
                 <p class="photo__sum">96</p>
@@ -86,8 +92,10 @@
               <img src="img/main-bridge-mobile@1x.jpg" width="280" height="280" alt="Мост Дьявола">
             </div>
             <div class="photo__text">
-              <p class="photo__title">Мост Дьявола</p>
-              <p class="photo__author">Автор фото: Антон</p>
+              <div class="photo__container">
+                <p class="photo__title">Мост Дьявола</p>
+                <p class="photo__author">Автор фото: Антон</p>
+              </div>
               <div class="photo__likes">
                 <button class="photo__button" type="button"><span class="visually-hidden">Посавить лайк</span></button>
                 <p class="photo__sum">254</p>
@@ -136,7 +144,7 @@
       <address class="page-footer__copyright copyright">
         <span class="copyright__text">Разработано</span>
         <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive">
-          <img src="#" width="1" height="1" alt="html academy">
+          <img src="img/htmlacademy.svg" width="35" height="35" alt="html academy">
         </a>
       </address>
     </footer>
