--- a/source/form.html
+++ b/source/form.html
@@ -26,17 +26,17 @@
         </div>
       </nav>
       <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-      <a class="page-header__logo" href="https://htmlacademy.ru/intensive/adaptive">
+      <a class="page-header__logo" href="index.html">
         <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="101" height="83" alt="Седона">
       </a>
     </header>
     <main class="page-main">
-      <section class="intro">
+      <section class="intro intro-form">
         <section class="intro__header intro__header--form">
           <img class="intro__logo" src="img/text-sedona.svg" width="227" height="40" alt="sedona">
         </section>
         <section class="intro__content">
-          <h2 class="intro__title">Оставьте свой отзыв</h2>
+          <h2 class="intro__title intro__title--form">Оставьте свой отзыв</h2>
           <p class="intro__text intro__text--padding-form">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
         </section>
       </section>
