--- a/source/photo.html
+++ b/source/photo.html
@@ -36,8 +36,8 @@
           <img class="intro__logo" src="img/text-sedona.svg" width="280" height="209" alt="sedona">
         </section>
         <section class="intro__content">
-          <h2 class="intro__title">Фото и видео</h2>
-          <p class="intro__text intro-text--padding-photo">Не можете решиться на путешествие из-за курса? фотографии помогут вам забыть о политике и экономике.</p>
+          <h2 class="intro__title intro__title--photo">Фото и видео</h2>
+          <p class="intro__text intro__text--photo">Не можете решиться на путешествие из-за курса? фотографии помогут вам забыть о политике и экономике.</p>
         </section>
       </section>
       <section class="photo-wrapper">
