--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
@@ -27,13 +28,20 @@
       </nav>
       <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <a class="page-header__logo">
-        <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="101" height="83" alt="Седона">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+          <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="101" height="83" alt="Седона">
+        </picture>
       </a>
     </header>
     <main class="page-main">
       <section class="intro">
         <section class="intro__header">
-          <img class="intro__logo" src="img/text-sedona-index.svg" width="280" height="209" alt="sedona">
+          <picture>
+            <source media="(min-width: 768px)" srcset="img/text-sedona-index.svg">
+            <img class="intro__logo" src="img/text-sedona-index.svg" alt="sedona">
+          </picture>
         </section>
         <section class="intro__content">
           <h2 class="visually-hidden">Преимущества городка Седона</h2>
@@ -47,7 +55,13 @@
               <p class="advantages__number">— №1 —</p>
               <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
             </div>
-            <img class="advantages__photo" src="img/main-city-mobile@1x.jpg" width="320" height="260" alt="Жилье">
+            <div class="advantages__container">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.jpg 1x, img/main-city-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/main-city-tablet@1x.jpg 1x, img/main-city-tablet@2x.jpg 2x">
+                <img class="advantages__photo" src="img/main-city-mobile@1x.jpg, img/main-city-mobile@2x.jpg 2x"" alt="Жилье">
+              </picture>
+            </div>
             <div class="advantages__wrapper advantages__wrapper--detail">
               <ul>
                 <li class="advantages__detail advantages__detail--lodging">
@@ -71,7 +85,13 @@
               <p class="advantages__number">— №2 —</p>
               <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
             </div>
-            <img class="advantages__photo" src="img/photo-bridge-mobile@1x.jpg" width="320" height="260" alt="мост дьявола">
+            <div class="advantages__container">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.jpg 1x, img/photo-bridge-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.jpg 1x, img/photo-bridge-tablet@2x.jpg 2x">
+                <img class="advantages__photo" src="img/photo-bridge-mobile@1x.jpg, img/photo-bridge-mobile@2x.jpg 2x" alt="мост дьявола">
+              </picture>
+            </div>
           </li>
           <li class="advantages__item">
             <h3 class="advantages__title">Небольшая площадь</h3>
@@ -96,7 +116,11 @@
         <a class="search-hotel__button button" href="#">Найти гостиницу</a>
       </section>
       <div class="map">
-        <img src="img/bg-map-mobile@1x.jpg" width="320" height="350" alt="sedona, arizona, usa">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/bg-map-desktop@1x.jpg, img/bg-map-desktop@2x.jpg 2x">
+          <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.jpg, img/bg-map-tablet@2x.jpg 2x" width="768" height="350">
+          <img src="img/bg-map-mobile@1x.jpg" srcset="img/bg-map-mobile@2x.jpg 2x" alt="sedona, arizona, usa">
+       </picture>
       </div>
     </main>
     <footer class="page-footer">
@@ -105,7 +129,7 @@
         <ul class="social">
           <li class="social__item">
             <a class="social__link social__link--tw" href="#"><span class="visually-hidden">Twitter</span>
-              <img src="img/icon-twitter.svg"></a>
+            </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--fb" href="#"><span class="visually-hidden">Facebook</span></a>
