--- a/source/form.html
+++ b/source/form.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.min.css">
   </head>
   <body>
     <header class="page-header">
-      <nav class="main-nav">
+      <nav class="main-nav main-nav--open">
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
@@ -146,12 +146,12 @@
         </a>
       </address>
     </footer>
-    <section class="modal modal--error">
+    <section class="modal modal--error visually-hidden">
       <h2 class="modal__title">Что-то пошло не так!</h2>
       <p class="modal__text">Провертье поля, выделенные красным, скорее всего вы забыли их заполнить</p>
       <button class="button modal__button modal__button--width--small" type="button">OK</button>
     </section>
-    <section class="modal modal--done">
+    <section class="modal modal--done visually-hidden">
       <h2 class="modal__title">Ваш отзыв отправлен!</h2>
       <p class="modal__text">Спасибо за ваше участие, ваш отзыв уже поступил к нам. <br> В ближайшее время мы опубликуем его на сайте</p>
       <button class="button modal__button modal__button--width--large" type="button">Закрыть окно</button>
