--- a/source/form.html
+++ b/source/form.html
@@ -156,5 +156,6 @@
       <p class="modal__text">Спасибо за ваше участие, ваш отзыв уже поступил к нам. <br> В ближайшее время мы опубликуем его на сайте</p>
       <button class="button modal__button modal__button--width--large" type="button">Закрыть окно</button>
     </section>
+    <script src="js/picturefill.js"></script>
   </body>
 </html>
