--- a/source/photo.html
+++ b/source/photo.html
@@ -52,7 +52,7 @@
               <picture>
                 <source media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.jpg 1x, img/photo-sunset-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.jpg 1x, img/photo-sunset-tablet@2x.jpg 2x">
-                <img src="img/photo-sunset-mobile@1x.jpg" src="img/photo-sunset-mobile@2x.jpg 2x" alt="Неродные просторы">
+                <img src="img/photo-sunset-mobile@1x.jpg" srcset="img/photo-sunset-mobile@2x.jpg 2x" alt="Неродные просторы">
               </picture>
             </div>
             <div class="photo__text">
@@ -91,7 +91,7 @@
               <picture>
                 <source media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.jpg 1x, img/photo-roads-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="img/photo-roads-tablet@1x.jpg 1x, img/photo-roads-tablet@2x.jpg 2x">
-                <img src="img/photo-roads-mobile@1x.jpg" secset="img/photo-roads-mobile@2x.jpg 2x" alt="Дорога на север">
+                <img src="img/photo-roads-mobile@1x.jpg" srcset="img/photo-roads-mobile@2x.jpg 2x" alt="Дорога на север">
               </picture>
             </div>
             <div class="photo__text">
@@ -176,5 +176,6 @@
         </a>
       </address>
     </footer>
+    <script src="js/picturefill.js"></script>
   </body>
 </html>
