--- a/source/photo.html
+++ b/source/photo.html
@@ -45,8 +45,8 @@
           <p class="intro__text intro__text--photo">Не можете решиться на путешествие из-за курса? фотографии помогут вам забыть о политике и экономике.</p>
         </section>
       </section>
-      <section class="photo-wrapper">
-        <ul class="photo">
+      <section class="photo">
+        <ul class="photo__list">
           <li class="photo__item">
             <div class="photo__wrapper">
               <picture>
